jEdit 4.5 version history
       (changes since jEdit 4.4.2)
:encoding=UTF-8:

{{{ Version 4.5.2

Thanks to Björn "Vampire" Kautler, Alan Ezust, and Matthieu Casanova for
contributing to this release.

{{{ Bug Fixes

- Fixed freezes on hypersearch with encoding errors.
  (#3502585 Jarek Czekalski)

- Fixed IO error when changing VFS Browser filter content
  (#3502820 Matthieu Casanova)

- Fixed NPE when opening View option pane for the first time on a fresh
  installation (#3520577 Matthieu Casanova)

 - Fixed favorites menu actions (#3512250 Matthieu Casanova)

 - Remove jar cache when unloading a plugin (#3514022 Matthieu Casanova)

}}}
{{{ Miscellaneous


}}}
{{{ API Changes


}}}
{{{ Editing


}}}

}}}

{{{ Version 4.5.1

Thanks to Björn "Vampire" Kautler, Matthieu Casanova, Kazutoshi Satoda,
Alan Ezust, and Max Funk for contributing to this release.

{{{ Bug Fixes

- Fixed memory leaks which happened when split panes or multiple views
  are used. (Kazutoshi Satoda)

- Fixed unreasonable slow down which could happen with complex syntax
  rules and large files. (Kazutoshi Satoda)

- Fixed memory leaks which could climb to be observable with complex
  syntax rules and large files. (Kazutoshi Satoda)

- Made basic edit operations aware of characters above BMP and combining
  character sequences.
  (SF.net bug #3040720 - Kazutoshi Satoda)

- The Install/Update plugin dialog with progress bar should not show the
  progression of installation in it's title (#3485497) (Matthieu Casanova)

- If the plugin list was not already loaded, there is no reason to load it
  because of a property change (#3485645) (Matthieu Casanova)

- Fixed status bar widget editing (#3414671) (Matthieu Casanova)

- Fixed text area corruption (strange exceptions and/or inconsistent
  display) which could happen when multiple files are opened
  simultaneously in a text area. This could also happen on some other
  minor conditions. (SF.net bug #3442116 - Kazutoshi Satoda)
